--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "pre-commit": "lint-staged"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "eslint-config-prettier": "^9.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.50.1"
+    "react-hook-form": "^7.50.1",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
